--- a/difffify/nginx.conf.j2
+++ b/difffify/nginx.conf.j2
@@ -12,15 +12,16 @@ server {
         large_client_header_buffers 8 32k;
 
         location /  {
-            alias /var/www/difffify;
+            root /var/www/difffify;
         }
 
-        location /backend {
+        location /backend/ {
+        rewrite ^/backend(/.*)$ $1 break;
         proxy_set_header X_FORWARDED_PROTO http;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass http://differ:8000;
+        proxy_pass http://differ:8000/;
         }
 }
 
